entity_macros/tests/ui/attribute/unsupported-tuple-struct.stderr
error: Tuple struct not supported
 --> $DIR/unsupported-tuple-struct.rs:4:1
  |
4 | #[derive(Clone, Ent)]
  | ^^^^^^^^^^^^^^^^^^^^^
